--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header class="header">
-      <section class="header__section section">
+      <section class="header__section section" id="top">
         <div class="header__left">
           <p class="header__text">Події</p>
           <h1 class="header__title">
@@ -45,7 +45,7 @@
     </header>
     <main class="main">
       <section class="main__section section">
-        <div class="events">
+        <div class="events" id="events">
           <h2 class="events__title">
             Актуальні події
           </h2>
@@ -122,7 +122,7 @@
       </section>
 
       <section class="main__section section">
-        <div class="gallery">
+        <div class="gallery" id="gallery">
           <h2 class="gallery__title">
             Галерея
           </h2>
@@ -161,7 +161,7 @@
         </div>
       </section>
       <section class="main__section section">
-        <div class="main__follow follow">
+        <div class="follow" id="follow">
           <div class="follow__article">
             <h2 class="follow__title">
               Підписка
@@ -194,10 +194,10 @@
           <div class="footer__info info">
             <div class="info__left">
               <div class="footer__icons">
-                <div class="footer__logo">
+                <a class="footer__logo" href="#top">
                   NA
                   <br>MU
-                </div>
+                </a>
                 <div class="footer__socials">
                   <img
                     class="footer__icon"
@@ -243,7 +243,7 @@
                   <br> до закриття музею
                 </p>
               </div>
-              <div class="footer__contacts contacts">
+              <div class="footer__contacts contacts" id="contacts">
                 <h3 class="contacts__title">Контакти:</h3>
                 <div class="contacts__list">
                   <p class="contacts__item">
@@ -274,16 +274,16 @@
               <nav class="footer__nav nav">
                 <ul class="nav__left nav__list">
                   <li class="nav__item">
-                    <a href="#" class="nav__link">Галерея</a>
+                    <a href="#gallery" class="nav__link">Галерея</a>
                   </li>
                   <li class="nav__item">
-                    <a href="#" class="nav__link">Виставки та події</a>
+                    <a href="#events" class="nav__link">Виставки та події</a>
                   </li>
                   <li class="nav__item">
                     <a href="#" class="nav__link">Відвідування</a>
                   </li>
                   <li class="nav__item">
-                    <a href="#" class="nav__link">Стати нашим другом</a>
+                    <a href="#follow" class="nav__link">Стати нашим другом</a>
                   </li>
                 </ul>
               </nav>
@@ -298,7 +298,7 @@
                   <a href="#" class="nav__link">Блог</a>
                 </li>
                 <li class="nav__item">
-                  <a href="#" class="nav__link">Контакти</a>
+                  <a href="#contacts" class="nav__link">Контакти</a>
                 </li>
               </nav>
             </div>
