without mobile adaptive

--- a/src/index.html
+++ b/src/index.html
@@ -191,8 +191,10 @@
           <div class="contacts">
             <h3 class="contacts__text">Контакти:</h3>
             <div class="contacts__details">
-              <a href="" class="contacts__details-info">вул. М. Грушевсько,6; <br class="contacts__details-info"> Київ, 01001 </a>
+              <a href="" class="contacts__details-info">вул. М. Грушевсько,6; <br> Київ, 01001 </a>
+              <br>
               <a href="tel:+380442781357" class="contacts__details-info"> тел. +38 (044) 278-13-57 <br> факс +38 (044) 278-74-54</a>
+              <br>
               <a href="https://www.google.com/intl/ru/gmail/about/" class="contacts__details-info"> e-mail: info@namu.kiev.ua</a>
             </div>
           </div>
