--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap"
@@ -19,12 +19,12 @@
       <a href="#" class="header__logo">NA<br>MU</a>
       <div class="header__photo">
         <h2 class="header__title">ХУДОЖ<span class="header__title--transparent">НІЙ</span><br>МУЗЕЙ</h2>
-        <div class="header__tickets-wrapper">
+        <a href="#" class="header__tickets-wrapper">
           <p class="header__tickets">КВИТКИ</p>
-          <a class="header__link" href="#">
+          <div class="header__link" href="#">
             <div class="header__link-vector"></div>
-          </a>
-        </div>
+          </div>
+        </a>
       </div>
     </header>
     <main class="content">
@@ -74,8 +74,105 @@
           </div>
         </div>
       </section>
+      <section class="content__gallery gallery">
+        <h2 class="gallery__title">Галерея</h2>
+        <div class="gallery__pictures">
+          <img
+            src="./images/gallery/picture1.png"
+            alt="picture"
+            class="gallery__picture gallery__picture--1"
+          >
+          <img
+            src="./images/gallery/picture2.png"
+            alt="picture"
+            class="gallery__picture gallery__picture--2"
+          >
+          <img
+            src="./images/gallery/picture3.png"
+            alt="picture"
+            class="gallery__picture gallery__picture--3"
+          >
+          <img
+            src="./images/gallery/picture4.png"
+            alt="picture"
+            class="gallery__picture gallery__picture--4"
+          >
+          <img
+            src="./images/gallery/picture5.png"
+            alt="picture"
+            class="gallery__picture gallery__picture--5"
+          >
+          <img
+            src="./images/gallery/picture6.png"
+            alt="picture"
+            class="gallery__picture gallery__picture--6"
+          >
+        </div>
+      </section>
+      <section class="subscription">
+        <div class="subscription__wrapper">
+          <h2 class="subscription__title">Підписка</h2>
+          <p class="subscription__caption">Бути в курсі всіх актуальних подій та останніх новин.</p>
+          <form
+            action="#"
+            method="post"
+            class="subscription__form"
+          >
+            <input type="text" class="subscription__input">
+            <button class="subscription__button">
+              <div class="subscription__button-vector"></div>
+            </button>
+          </form>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer class="content__footer footer">
+      <div class="footer__icons">
+        <a href="#" class="footer__logo">NA<br>MU</a>
+        <div class="footer__networks">
+          <a href="#"><div class="footer__facebook-icon"></div></a>
+          <a href="#"><div class="footer__instagram-icon"></div></a>
+        </div>
+      </div>
+      <div class="footer__opening-time">
+        <p>Графік роботи</p>
+        <br>
+        <ul class="footer__list">
+          <li class="footer__item"><strong>12:00 - 20:00</strong> середа</li>
+          <li class="footer__item"><strong>12:00 - 20:00</strong> четвер</li>
+          <li class="footer__item"><strong>12:00 - 20:00</strong> п'ятниця</li>
+          <li class="footer__item"><strong>11:00 - 19:00</strong> субота</li>
+          <li class="footer__item"><strong>11:00 - 19:00</strong> неділя</li>
+        </ul>
+        <br>
+        <p>
+          <strong>Вихідні:</strong> понеділок, вівторок.
+          Каса припиняє роботу за 1 годину до закриття музею
+        </p>
+      </div>
+      <div class="footer__contacts">
+        <p>Контакти</p>
+        <br>
+        <p>вул. М. Грушевського, 6; Київ, 01001 <br> тел. +38 (044) 278-13-57<br> факс +38 (044) 278-74-54  <br> e-mail: info@namu.kiev.ua</p>
+      </div>
+      <div class="footer__line"></div>
+      <div class="footer__nav">
+        <ul class="footer__list">
+          <li class="footer__nav-item"><a href="#" class="footer__link">Галерея</a></li>
+          <li class="footer__nav-item"><a href="#" class="footer__link">Виставки та події</a></li>
+          <li class="footer__nav-item"><a href="#" class="footer__link">Відвідування</a></li>
+          <li class="footer__nav-item"><a href="#" class="footer__link">Стати нашим другом</a></li>
+        </ul>
+      </div>
+      <div class="footer__other">
+        <ul class="footer__list">
+          <li class="footer__nav-item"><a href="#" class="footer__link">Про нас</a></li>
+          <li class="footer__nav-item"><a href="#" class="footer__link">Магазин</a></li>
+          <li class="footer__nav-item"><a href="#" class="footer__link">Блог</a></li>
+          <li class="footer__nav-item"><a href="#" class="footer__link">Контанки</a></li>
+        </ul>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
