--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,14 @@
         class="header__checkbox"
         id="checkbox"
       >
-      <label for="checkbox" class="header__label">
-        <div class="header__label-burger"></div>
-        <div class="empty"></div>
-      </label>
+      <div class="block">
+        <div class="header__label">
+          <label for="checkbox" class="burger">
+            <div class="burger__image"></div>
+          </label>
+          <div class="empty"></div>
+        </div>
+      </div>
       <nav class="nav">
         <ul class="nav__list">
           <li class="nav__item">
@@ -55,47 +59,48 @@
     </header>
     <main class="main">
       <div class="museum" id="museum">
-        <div class="empty"></div>
+        <div class="museum__content">
+          <h1 class="museum__content-name">ХУДОЖ<span class="museum__content-name-opacity">НІЙ</span>
+            <br>
+            МУЗЕЙ
+          </h1>
+          <div class="button">
+            <a href="#" class="button__buy">КВИТКИ</a>
+          </div>
+        </div>
         <div class="museum__photo">
           <div class="museum__photo-image"></div>
           <a href="#index.html" class="museum__photo-text">NA <br> MU</a>
-          <div class="museum__content">
-            <h1 class="museum__content-name">ХУДОЖ<span class="museum__content-name-opacity">НІЙ</span>
-              <br>
-              МУЗЕЙ
-            </h1>
-            <a href="#" class="museum__content-button">КВИТКИ</a>
-          </div>
         </div>
       </div>
-      <section class="relevant" id="relevant">
-        <h2 class="relevant__title">Актуальні події</h2>
-        <div class="wrapper">
-          <img
-            src="photo/painting-1.jpg"
-            alt="painting-1"
-            class="wrapper__image"
-         >
-          <div class="wrapper__content">
-            <div class="wrapper__content-exhibition">ВИСТАВКА</div>
-            <h3 class="wrapper__content-title">Йду і повертаюсь</h3>
-            <p class="wrapper__content-about">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
-          </div>
-        </div>
-        <div class="wrapper__second">
-          <div class="wrapper__content box1">
-            <div class="wrapper__content-exhibition">ВИСТАВКА</div>
-            <h3 class="wrapper__content-title" >І спогади і мрії</h3>
-            <p class="wrapper__content-about ">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
-          </div>
-          <img
-            src="photo/painting-2.jpg"
-            alt="painting-2"
-            class="wrapper__image box2"
-          >
-        </div>
-      </section>
     </main>
+    <section class="relevant" id="relevant">
+      <h2 class="relevant__title">Актуальні події</h2>
+      <div class="wrapper">
+        <img
+          src="photo/painting-1.jpg"
+          alt="painting-1"
+          class="wrapper__image"
+       >
+        <div class="wrapper__content">
+          <div class="wrapper__content-exhibition">ВИСТАВКА</div>
+          <h3 class="wrapper__content-title">Йду і повертаюсь</h3>
+          <p class="wrapper__content-about">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+        </div>
+      </div>
+      <div class="wrapper__second">
+        <div class="wrapper__content box1">
+          <div class="wrapper__content-exhibition">ВИСТАВКА</div>
+          <h3 class="wrapper__content-title" >І спогади і мрії</h3>
+          <p class="wrapper__content-about ">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+        </div>
+        <img
+          src="photo/painting-2.jpg"
+          alt="painting-2"
+          class="wrapper__image box2"
+        >
+      </div>
+    </section>
     <section class="background" id="lection">
       <div class="background__image">
         <a href="#" class="background__container">
@@ -118,7 +123,7 @@
         <img
           src="photo/painting-4.jpg"
           alt="painting-4"
-          class="gallery__wrapper-image"
+          class="gallery__wrapper-image visible"
         >
         <img
           src="photo/1.jpg"
@@ -157,7 +162,7 @@
           <h3 class="container__subtitle">Бути в курсі всіх актуальних подій та останніх новин.</h3>
           <form action="get" class="form">
             <input
-              type="search"
+              type="email"
               class="form__search"
               placeholder="E-mail"
               required
@@ -177,25 +182,27 @@
               <a href="#" class="icons__link-insta"></a>
             </div>
           </div>
-          <div class="rota">
-            <h3 class="rota__title">Графік роботи</h3>
-            <div class="rota__week">
-              <div class="rota__week-time">12:00 — 20:00<span class="rota__week-time-day"> середа</span></div>
-              <div class="rota__week-time">12:00 — 20:00<span class="rota__week-time-day"> четвер</span></div>
-              <div class="rota__week-time">2:00 — 20:00<span class="rota__week-time-day"> п’ятниця</span></div>
-              <div class="rota__week-time">11:00 — 19:00<span class="rota__week-time-day"> субота</span></div>
-              <div class="rota__week-time">11:00 — 19:00<span class="rota__week-time-day"> неділя</span></div>
+          <div class="field">
+            <div class="rota">
+              <h3 class="rota__title">Графік роботи</h3>
+              <div class="rota__week">
+                <div class="rota__week-time">12:00 — 20:00<span class="rota__week-time-day"> середа</span></div>
+                <div class="rota__week-time">12:00 — 20:00<span class="rota__week-time-day"> четвер</span></div>
+                <div class="rota__week-time">2:00 — 20:00<span class="rota__week-time-day"> п’ятниця</span></div>
+                <div class="rota__week-time">11:00 — 19:00<span class="rota__week-time-day"> субота</span></div>
+                <div class="rota__week-time">11:00 — 19:00<span class="rota__week-time-day"> неділя</span></div>
+              </div>
+              <p class="rota__comment"> <span class="rota__comment-bold">Вихідні:</span> понеділок, <br> вівторок <br> Каса припиняє роботу <br> за 1 годину <br> до закриття музею</p>
             </div>
-            <p class="rota__comment"> <span class="rota__comment-bold">Вихідні:</span> понеділок, <br> вівторок <br> Каса припиняє роботу <br> за 1 годину <br> до закриття музею</p>
-          </div>
-          <div class="contacts">
-            <h3 class="contacts__text">Контакти:</h3>
-            <div class="contacts__details">
-              <a href="" class="contacts__details-info">вул. М. Грушевсько,6; <br> Київ, 01001 </a>
-              <br>
-              <a href="tel:+380442781357" class="contacts__details-info"> тел. +38 (044) 278-13-57 <br> факс +38 (044) 278-74-54</a>
-              <br>
-              <a href="https://www.google.com/intl/ru/gmail/about/" class="contacts__details-info"> e-mail: info@namu.kiev.ua</a>
+            <div class="contacts">
+              <h3 class="contacts__text">Контакти:</h3>
+              <div class="contacts__details">
+                <a href="" class="contacts__details-info">вул. М. Грушевсько,6; <br> Київ, 01001 </a>
+                <br>
+                <a href="tel:+380442781357" class="contacts__details-info"> тел. +38 (044) 278-13-57 <br> факс +38 (044) 278-74-54</a>
+                <br>
+                <a href="https://www.google.com/intl/ru/gmail/about/" class="contacts__details-info"> e-mail: info@namu.kiev.ua</a>
+              </div>
             </div>
           </div>
         </div>
