--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,36 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <header class="header">
+    <header class="header" id="header">
+      <nav class="header__nav nav">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="#" class="nav__link">Галерея</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Виставки та події</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Відвідування</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Стати нашим другом</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Про нас</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Магазин</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Блог</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Контакти</a>
+          </li>
+        </ul>
+        <a class="nav__logo">NA<br>MU</a>
+      </nav>
       <div class="header__hamburger-wrapper">
         <div class="header__hamburger"></div>
         <p class="header__side">ПОДІЇ</p>
@@ -151,9 +180,10 @@
         </p>
       </div>
       <div class="footer__contacts">
-        <p>Контакти</p>
+        <p>Контакти:</p>
         <br>
         <p>вул. М. Грушевського, 6; Київ, 01001 <br> тел. +38 (044) 278-13-57<br> факс +38 (044) 278-74-54  <br> e-mail: info@namu.kiev.ua</p>
+        <a href="#header" class="footer__scroll-up"></a>
       </div>
       <div class="footer__line"></div>
       <div class="footer__nav">
@@ -169,7 +199,7 @@
           <li class="footer__nav-item"><a href="#" class="footer__link">Про нас</a></li>
           <li class="footer__nav-item"><a href="#" class="footer__link">Магазин</a></li>
           <li class="footer__nav-item"><a href="#" class="footer__link">Блог</a></li>
-          <li class="footer__nav-item"><a href="#" class="footer__link">Контанки</a></li>
+          <li class="footer__nav-item"><a href="#" class="footer__link">Контакти</a></li>
         </ul>
       </div>
     </footer>
