--- a/src/index.html
+++ b/src/index.html
@@ -20,26 +20,58 @@
     <header class="header">
       <section class="header__section section" id="top">
         <div class="header__left">
+          <div class="header__menu-toggler"></div>
           <p class="header__text">Події</p>
           <h1 class="header__title">
             Худож<span class="header__title-transparent">ній</span>
             <br> музей
           </h1>
-          <a href="#" class="header__link">
+          <a href="#buy" class="header__link">
             <span class="header__link-text">Квитки</span><span
               class="header__link-arrow">&#10095</span>
           </a>
         </div>
-        <p class="header__logo">
+        <a class="header__logo" href="#">
           Na
           <br>Mu
-        </p>
+        </a>
         <div class="header__right">
           <img
             src="./images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png"
             alt="National art museum"
             class="header__img"
           >
+        </div>
+        <div class="menu">
+          <nav class="menu__nav-top nav-top">
+            <ul class="nav-top__list">
+              <li class="nav-top__item">
+                <a href="#gallery" class="nav-top__link">Галерея</a>
+              </li>
+              <li class="nav-top__item">
+                <a href="#events" class="nav__link">Виставки та події</a>
+              </li>
+              <li class="nav-top__item">
+                <a href="#" class="nav-top__link">Відвідування</a>
+              </li>
+              <li class="nav-top__item">
+                <a href="#follow" class="nav-top__link">Стати нашим другом</a>
+              </li>
+
+              <li class="nav-top__item">
+                <a href="#" class="nav-top__link">Про Нас</a>
+              </li>
+              <li class="nav-top__item">
+                <a href="#" class="nav-top__link">Магазин</a>
+              </li>
+              <li class="nav-top__item">
+                <a href="#" class="nav-top__link">Блог</a>
+              </li>
+              <li class="nav-top__item">
+                <a href="#contacts" class="nav-top__link">Контакти</a>
+              </li>
+            </ul>
+          </nav>
         </div>
       </section>
     </header>
@@ -173,7 +205,7 @@
           <form
             class="follow__form"
             action="#"
-            method="post"
+            method="GET"
           >
             <label for="email">
               <input
