--- a/src/index.html
+++ b/src/index.html
@@ -66,6 +66,7 @@
           </h1>
           <div class="button">
             <a href="#" class="button__buy">КВИТКИ</a>
+            <div class="button__click">></div>
           </div>
         </div>
         <div class="museum__photo">
@@ -165,7 +166,6 @@
               type="email"
               class="form__search"
               placeholder="E-mail"
-              required
             >
             <button class="form__button">></button>
           </form>
