--- a/src/index.html
+++ b/src/index.html
@@ -161,7 +161,11 @@
         <div class="container">
           <h2 class="container__title">Підписка</h2>
           <h3 class="container__subtitle">Бути в курсі всіх актуальних подій та останніх новин.</h3>
-          <form action="get" class="form">
+          <form
+            action="index.html"
+            method="GET"
+            class="form"
+          >
             <input
               type="email"
               class="form__search"
