--- a/src/index.html
+++ b/src/index.html
@@ -170,6 +170,7 @@
               type="email"
               class="form__search"
               placeholder="E-mail"
+              required
             >
             <button class="form__button">></button>
           </form>
