finally fix header

--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,6 @@
   <body class="page">
     <header class="header" id="header">
       <div class="header__content-wrapper">
-        <img
-        src="./images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.jpg"
-        class="header__photo"
-        alt="Museum"
-        >
         <div class="header__top">
           <div class="header__nav-toggler"></div>
           <a href="#" class="header__logo">
@@ -31,7 +26,12 @@
             MU
           </a>
         </div>
-        <div class="header__bottom">
+        <div class="header__image-wrapper">
+          <img
+          src="./images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.jpg"
+          class="header__photo"
+          alt="Museum"
+          >
           <h1 class="header__title">ХУДОЖ<span class="header__title--accent">НІЙ</span> МУЗЕЙ</h1>
           <a href="#" class="header__ticket-buy-link">Квитки</a>
         </div>
