--- a/src/index.html
+++ b/src/index.html
@@ -28,9 +28,9 @@
         </div>
         <div class="header__image-wrapper">
           <img
-          src="./images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.jpg"
-          class="header__photo"
-          alt="Museum"
+            src="./images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.jpg"
+            class="header__photo"
+            alt="Museum"
           >
           <h1 class="header__title">ХУДОЖ<span class="header__title--accent">НІЙ</span> МУЗЕЙ</h1>
           <a href="#" class="header__ticket-buy-link">Квитки</a>
@@ -77,7 +77,7 @@
           >
           <div class="events__wrapper">
             <div class="events__info">
-              <p class="events__name">ВИСТАВКА</p>
+              <p class="events__name">Виставка</p>
               <p class="events__date">26.08-29.11.2019</p>
             </div>
             <h3 class="events__event-title">Йду і повертаюсь</h3>
