done. waiting for review

--- a/src/index.html
+++ b/src/index.html
@@ -142,6 +142,16 @@
               alt="gallery painting"
               class="gallery__painting gallery__painting--4"
             >
+            <img
+              src="./images/Rectangle 24.jpg"
+              alt="gallery painting"
+              class="gallery__painting gallery__painting--5"
+            >
+            <img
+              src="./images/Rectangle 25.jpg"
+              alt="gallery painting"
+              class="gallery__painting gallery__painting--6"
+            >
           </article>
         </div>
         <div class="gallery__navigation">
