--- a/src/index.html
+++ b/src/index.html
@@ -236,7 +236,12 @@
                   до закриття музею.
                 </p>
                 <p class="footer__contacts">Контакти:<br><br>
-                  вул. М. Грушевського, 6; Київ, 01001<br>
+                  <a
+                    target="https://goo.gl/maps/C9f2VqxXuE4FYY467"
+                    class="footer__map"
+                    href="https://goo.gl/maps/C9f2VqxXuE4FYY467">вул. М. Грушевського, 6; Київ, 01001
+                  </a>
+                  <br>
                   <a
                     href="tel:+38 (044) 278-13-57"
                     class="footer__contacts-link"
