--- a/src/index.html
+++ b/src/index.html
@@ -52,13 +52,13 @@
             <a href="#subscription" class="header__nav-link">Стати нашим другом</a>
           </li>
           <li class="header__nav-item">
-            <a href="#" class="header__nav-link">Про Нас</a>
+            <a href="#contacts" class="header__nav-link">Про Нас</a>
           </li>
           <li class="header__nav-item">
-            <a href="#" class="header__nav-link">Магазин</a>
+            <a href="#contacts" class="header__nav-link">Магазин</a>
           </li>
           <li class="header__nav-item">
-            <a href="#" class="header__nav-link">Блог</a>
+            <a href="#subscription" class="header__nav-link">Блог</a>
           </li>
           <li class="header__nav-item">
             <a href="#contacts" class="header__nav-link">Контакти</a>
@@ -188,8 +188,18 @@
         <div class="footer__usefull-links">
           <a href="#" class="footer__namu">Na<br>Mu</a>
           <div class="footer__links">
-            <a href="https://www.facebook.com/" class="footer__facebook"></a>
-            <a href="https://www.instagram.com/" class="footer__instagram"></a>
+            <a
+              href="https://www.facebook.com/"
+              class="footer__facebook"
+              target="blank"
+            >
+            </a>
+            <a
+              href="https://www.instagram.com/"
+              class="footer__instagram"
+              target="blank"
+            >
+            </a>
           </div>
         </div>
         <div class="footer__schedule" id="schedule">
@@ -217,7 +227,13 @@
           <ul class="footer__contact-list">
             <li class="footer__contact-item">
               <address>
-                <a href="https://goo.gl/maps/UsPPxzLyQ2UtPjHC8" class="footer__contact-link">вул. М. Грушевського, 6; Київ, 01001</a>
+                <a
+                  href="https://goo.gl/maps/UsPPxzLyQ2UtPjHC8"
+                  class="footer__contact-link"
+                  target="blank"
+                >
+                  вул. М. Грушевського, 6; Київ, 01001
+                </a>
               </address>
             </li>
             <li class="footer__contact-item">
@@ -250,13 +266,13 @@
         </ul>
         <ul class="footer__nav-list">
           <li class="footer__nav-item">
-            <a href="#" class="footer__nav-link">Про Нас</a>
+            <a href="#contacts" class="footer__nav-link">Про Нас</a>
           </li>
           <li class="footer__nav-item">
-            <a href="#" class="footer__nav-link">Магазин</a>
+            <a href="#contacts" class="footer__nav-link">Магазин</a>
           </li>
           <li class="footer__nav-item">
-            <a href="#" class="footer__nav-link">Блог</a>
+            <a href="#subscription" class="footer__nav-link">Блог</a>
           </li>
           <li class="footer__nav-item">
             <a href="#contacts" class="footer__nav-link">Контакти</a>
