--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
             Худож<span class="header__title-transparent">ній</span>
             <br> музей
           </h1>
-          <a href="#buy" class="header__link">
+          <a href="#events" class="header__link">
             <span class="header__link-text">Квитки</span><span
               class="header__link-arrow">&#10095</span>
           </a>
@@ -52,20 +52,20 @@
                 <a href="#events" class="nav__link">Виставки та події</a>
               </li>
               <li class="nav-top__item">
-                <a href="#" class="nav-top__link">Відвідування</a>
+                <a href="#description" class="nav-top__link">Відвідування</a>
               </li>
               <li class="nav-top__item">
                 <a href="#follow" class="nav-top__link">Стати нашим другом</a>
               </li>
 
               <li class="nav-top__item">
-                <a href="#" class="nav-top__link">Про Нас</a>
+                <a href="#aboutUs" class="nav-top__link">Про Нас</a>
               </li>
               <li class="nav-top__item">
                 <a href="#" class="nav-top__link">Магазин</a>
               </li>
               <li class="nav-top__item">
-                <a href="#" class="nav-top__link">Блог</a>
+                <a href="#follow" class="nav-top__link">Блог</a>
               </li>
               <li class="nav-top__item">
                 <a href="#contacts" class="nav-top__link">Контакти</a>
@@ -81,7 +81,7 @@
           <h2 class="events__title">
             Актуальні події
           </h2>
-          <div class="events__item">
+          <div class="events__item" id="aboutUs">
             <img
               class="events__img"
               src="./images/event1.png"
@@ -138,7 +138,7 @@
         </div>
       </section>
       <section class="main__section section">
-        <div class="description">
+        <div class="description" id="description">
           <div class="description__info">
             <p class="description__name">
               Лекція
@@ -231,16 +231,29 @@
                   <br>MU
                 </a>
                 <div class="footer__socials">
-                  <img
-                    class="footer__icon"
-                    src="./images/Facebook.png"
-                    alt="facebook"
-                    >
-                  <img
-                    class="footer__icon"
-                    src="./images/instagram.png"
-                    alt="instagram"
+                  <a
+                    class="footer__link"
+                    href="https://www.facebook.com/namu.museum/"
+                    target="blank"
                   >
+                    <img
+                      class="footer__icon"
+                      src="./images/Facebook.png"
+                      alt="facebook"
+                    >
+                  </a>
+                  <a
+                    class="footer__link"
+                    href="https://www.instagram.com/namu.museum/?fbclid=IwAR1aivNqvdPva7GhZ99KYeRaEOGlH5eQO06GfPURRPI9rN7BXhJ01uO8NMc"
+                    target="blank"
+                  >
+                    <img
+                      class="footer__icon"
+                      src="./images/instagram.png"
+                      alt="instagram"
+                    >
+                  </a>
+
                 </div>
               </div>
               <div class="footer__timetable timetable">
@@ -279,7 +292,9 @@
                 <h3 class="contacts__title">Контакти:</h3>
                 <div class="contacts__list">
                   <p class="contacts__item">
-                    <a href="https://goo.gl/maps/fzn5assdd9b3KAGH9"
+                    <a
+                      href="https://goo.gl/maps/fzn5assdd9b3KAGH9"
+                      target="blank"
                       class="contacts__link">
                       вул. М. Грушевського, 6; Київ, 01001
                     </a>
@@ -312,7 +327,7 @@
                     <a href="#events" class="nav__link">Виставки та події</a>
                   </li>
                   <li class="nav__item">
-                    <a href="#" class="nav__link">Відвідування</a>
+                    <a href="#description" class="nav__link">Відвідування</a>
                   </li>
                   <li class="nav__item">
                     <a href="#follow" class="nav__link">Стати нашим другом</a>
@@ -321,13 +336,13 @@
               </nav>
               <nav class="nav__right nav__list">
                 <li class="nav__item">
-                  <a href="#" class="nav__link">Про Нас</a>
+                  <a href="#aboutUs" class="nav__link">Про Нас</a>
                 </li>
                 <li class="nav__item">
                   <a href="#" class="nav__link">Магазин</a>
                 </li>
                 <li class="nav__item">
-                  <a href="#" class="nav__link">Блог</a>
+                  <a href="#follow" class="nav__link">Блог</a>
                 </li>
                 <li class="nav__item">
                   <a href="#contacts" class="nav__link">Контакти</a>
