--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="icon" href="./photo/svg/logo.svg">
   </head>
   <body>
     <script type="text/javascript" src="scripts/main.js"></script>
@@ -46,7 +47,7 @@
             <a href="#museum" class="nav__link">Магазин</a>
           </li>
           <li class="nav__item">
-            <a href="#" class="nav__link">Блог</a>
+            <a href="#relevant" class="nav__link">Блог</a>
           </li>
           <li class="nav__item">
             <a href="#footer" class="nav__link">Контакти</a>
@@ -65,8 +66,14 @@
             МУЗЕЙ
           </h1>
           <div class="button">
-            <a href="#" class="button__buy">КВИТКИ</a>
-            <div class="button__click">></div>
+            <a
+              href="#lection"
+              class="button__buy"
+              id="button-buy"
+            >
+              КВИТКИ
+            </a>
+            <a href="#lection" class="button__click">></a>
           </div>
         </div>
         <div class="museum__photo">
@@ -202,7 +209,18 @@
             <div class="contacts">
               <h3 class="contacts__text">Контакти:</h3>
               <div class="contacts__details">
-                <a href="" class="contacts__details-info">вул. М. Грушевсько,6; <br> Київ, 01001 </a>
+                <a href="https://www.google.com/maps/place/
+                %D0%9D%D0%B0%D1%86%D0%B8%D0%BE%D0%BD%D0%B0%D0%BB%D1%8C%D0%BD%D1%8B%D0%B9+
+                %D1%85%D1%83%D0%B4%D0%BE%D0%B6%D0%B5%D1%81%D1%82%D0%B2%D0%B5%D0%BD%D0%BD%D1%8B%D0%B9+
+                %D0%BC%D1%83%D0%B7%D0%B5%D0%B9+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D1%8B
+                /@50.4494274,30.5306505,15z
+                /data=!4m5!3m4!1s0x0:0x549e3a34119f524f!8m2!3d50.4493269!4d30.5304215"
+                   rel="nofollow noopener"
+                   class="contacts__details-info"
+                   target="_blank"
+                >
+                  вул. М. Грушевсько,6; <br> Київ, 01001
+                </a>
                 <br>
                 <a href="tel:+380442781357" class="contacts__details-info"> тел. +38 (044) 278-13-57 <br> факс +38 (044) 278-74-54</a>
                 <br>
