--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,11 @@
         </a>
       </div>
       <div class="capital__image">
-        <img src="./images/NA_MU.png" class="capital__logo logo" alt="logo namu">
+        <img
+          src="./images/NA_MU.png"
+          class="capital__logo logo"
+          alt="logo namu"
+        >
       </div>
     </header>
     <main>
