--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,32 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500&display=swap" rel="stylesheet">
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <!-- <div class="header__burger-logo-container-">
+        <div class="header__burger">&#9776;</div>
+        <div class="header__logo">NA<br>MU</div>
+        <div></div>
+      </div> -->
+      <div class="header__ticket-title-container">
+        <h1 class="header__title">ХУДОЖ<span class="header__text-opacity">НІЙ</span><br> МУЗЕЙ</h1>
+        <div class="header__ticket">
+          <span class="header__ticket-container-left">КВИТКИ</span>
+          <span class="header__ticket-container-right">&#10095;</span>
+        </div>
+      </div>
+      <img  src="./images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png"
+          class="header__photo"
+          alt="muzej Ukrayini Kiyiv"
+      >
+    </header>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
