--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,184 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="page__section header" id="header">
+      <div class="container">
+        <div class="header-container">
+          <div>
+            <a class="icon icon--menu header__menu-icon" href="#menu"></a>
+          </div>
+          <a class="header__logo" href="#">
+            <img
+              class="header__logo-image"
+              src="/images/logo.svg"
+              alt=""
+            >
+          </a>
+        </div>
+        <!--<img
+          class="header__header-image"
+          src="/images/header.png"
+          alt=""
+          >-->
+        <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+        <span class="header__subtitle">ПОДІЇ</span>
+        <form class="form">
+          <input
+            class="form__input"
+            id="header-input"
+            name="header-input"
+            type="text"
+            value="КВИТКИ"
+          >
+          <button class="form__button">
+            <img
+              class=""
+              src="/images/button-vector.svg"
+              alt=""
+            >
+          </button>
+        </form>
+      </div>
+    </header>
+    <!--<div class="page__section menu" id="menu">
+      <a class="icon icon--close menu__menu-icon" href="#"></a>
+    </div>-->
+
+    <main class="page__main">
+      <section class="page__section events" id="events">
+        <div class="container">
+          <h2 class="events__title">Актуальні події</h2>
+          <div>
+            <img
+              class=""
+              src="/images/events-1.png"
+              alt=""
+            >
+            <div>
+              <span class="events__exhibition">ВИСТАВКА</span>
+              <h3 class="events__exhibition-name">
+                Йду і повертаюсь
+              </h3>
+              <p>
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+          </div>
+          <div>
+            <img
+              class=""
+              src="/images/events-2.png"
+              alt=""
+            >
+            <div>
+              <span class="events__exhibition">ВИСТАВКА</span>
+              <h3 class="events__exhibition-name">
+                І спогади і мрії
+              </h3>
+              <p>
+                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="page__section lection" id="lection">
+        <div class="container">
+          <img
+            class="lection__image"
+            src="images/lection.png"
+            alt=""
+          >
+          <div class="wrapper-box">
+            <span class="lection__lection">ЛЕКЦІЯ</span>
+            <h3 class="lection__title">Від класицизму до романтизму</h3>
+          </div>
+        </div>
+      </section>
+      <section class="page__section gallery" id="gallery">
+        <div class="container">
+          <h2 class="gallery__title">Галерея</h2>
+          <div class="gallery__images">
+            <img
+              class="gallery__image"
+              src="/images/gallery-1.png"
+              alt=""
+            >
+            <img
+              class="gallery__image"
+              src="/images/gallery-3.png"
+              alt=""
+            >
+            <img
+              class="gallery__image"
+              src="/images/gallery-2.png"
+              alt=""
+            >
+            <img
+              class="gallery__image"
+              src="/images/gallery-4.png"
+              alt=""
+            >
+            <img
+              class="gallery__image"
+              src="/images/gallery-5.png"
+              alt=""
+            >
+            <img
+              class="gallery__image"
+              src="/images/gallery-6.png"
+              alt=""
+            >
+          </div>
+        </div>
+      </section>
+      <section class="page__section follow" id="follow">
+        <div class="container">
+          <h2>Підписка</h2>
+          <form>
+            <input
+              class=""
+              id=""
+              name=""
+              type=""
+              placeholder="E-mail"
+            >
+            <button></button>
+          </form>
+        </div>
+      </section>
+    </main>
+    <footer class="page__section footer" id="footer">
+      <img
+        class=""
+        src="/images/logo.svg"
+        alt=""
+      >
+      <img
+        class=""
+        src="/images/Facebook.svg"
+        alt=""
+      >
+      <img
+        class=""
+        src="/images/Instagram.svg"
+        alt=""
+      >
+      <div></div>
+      <div></div>
+      <nav></nav>
+      <span>Copyright © 2019. All Rights Reserved.</span>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
