--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,76 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700;800&family=Oswald&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="capital">
+      <div class="capital__information">
+        <h1 class="capital__title">
+          худож<span class="capital__title--empty">ній</span><br>музей
+        </h1>
+        <a href="#subscription" class="capital__item">
+          квитки
+          <div class="capital__button button"></div>
+        </a>
+      </div>
+      <div class="capital__image">
+        <img
+          src="./images/NA_MU.png"
+          class="capital__logo logo"
+          alt="logo namu"
+        >
+      </div>
+    </header>
+    <main>
+      <div class="container">
+        <section class="events">
+
+          <span class="events__text">події</span>
+          <h2 class="events__title" id="events">Актуальні події</h2>
+
+          <div class="events__item">
+            <img src="./images/event-1.png"
+              alt="landscape"
+              class="events__picture"
+            >
+            <div class="events__descr descr">
+              <div class="descr__main">
+                <span class="descr__info">виставка</span>
+                <span class="descr__date">26.08-29.11.2019</span>
+              </div>
+              <h3 class="descr__title">Йду і повертаюсь</h3>
+              <p class="descr__text">
+                Національний Художній Музей України презентує унікальну
+                частину колекції Градобанку - українське мистецтво другої
+                половини 1980-1995 років.
+              </p>
+            </div>
+          </div>
+
+          <div class="events__item events__item--reverse">
+            <img src="./images/event-2.png"
+              alt="girl with peacock"
+              class="events__picture"
+            >
+            <div class="events__descr descr events__descr--rev">
+              <div class="descr__main">
+                <span class="descr__info">виставка</span>
+                <span class="descr__date">26.08-29.11.2019</span>
+              </div>
+              <h3 class="descr__title">І спогади і мрії</h3>
+              <p class="descr__text">
+                Національний художній музей України до 100 річчя від дня
+                народження видатної української художниці Тетяни Яблонської
+                відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </div>
+        </section>
+      </div>
+    </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
