--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,11 @@
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
+  <body class="main-container">
     <header class="header">
-      <!-- <div class="header__burger-logo-container-">
-        <div class="header__burger">&#9776;</div>
-        <div class="header__logo">NA<br>MU</div>
-        <div></div>
+      <!-- <div class="header__burger-logo-container">
+        <div class="header__burger">=</div>
+        <div class="header__logo">NAVU</div>
       </div> -->
       <div class="header__ticket-title-container">
         <h1 class="header__title">ХУДОЖ<span class="header__text-opacity">НІЙ</span><br> МУЗЕЙ</h1>
