--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="page" lang="ru">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="page__header">
+      <div class="image-container">
+        <div class="title-container">
+          <h1 class="image__title">na<br>mu</h1>
+        </div>
+      </div>
+
+      <h1 class="page__title">Художній музей</h1>
+    </header>
+
+    <main class="main">
+
+    </main>
+
+    <footer class="footer">
+
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
