--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,9 @@
           <span class="header__ticket-container-right">&#10095;</span>
         </div>
       </div>
-      <img  src="./images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png"
+      <img  src="./images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200_1.png"
           class="header__photo"
-          alt="muzej Ukrayini Kiyiv"
+          alt="muzej_Ukrayini_Kiyiv"
       >
     </header>
     <script type="text/javascript" src="scripts/main.js"></script>
