--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,146 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>♖ Musseum ♖</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Condensed:wght@300;400;500;600;700&family=IBM+Plex+Sans:wght@200;300;400;500;600;700&family=Montserrat:wght@100;300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link
+      rel="shortcut icon"
+      href="./images/favicon.png"
+      type="image/png"
+    >
   </head>
   <body>
-    <h1>Artem</h1>
+    <header class="header">
+      <div class="header__top">
+        <div class="header__menu"></div>
+        <a class="header__logo" href="/">NA <br>MU</a>
+      </div>
+      <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+      <div class="header__buy">
+        <div class="header__text">КВИТКИ</div>
+        <a href="/" class="header__stor">
+          <img src="../src/images/Vector(1).png" alt="buy">
+        </a>
+      </div>
+    </header>
+    <main class="main">
+      <div class="main__events">
+        <h2 class="main__title">
+          Актуальні події
+        </h2>
+        <div class="main__card">
+          <div class="card">
+            <img
+              class="card__foto"
+              src="../src/images/Rectangle.jpg"
+              alt="page"
+            >
+            <div class="card__date">
+              <span>ВИСТАВКА</span>
+              <a target="blank" href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=MW5hZnBiM2hhaGhzb2RkOXZncmlxMHBuYWUgdGVtYXF3ZXJ0eTE1QG0&amp;tmsrc=temaqwerty15%40gmail.com">
+                15.03-29.06.2027
+              </a>
+            </div>
+            <h3 class="card__title">
+              Йду і повертаюсь
+            </h3>
+            <div class="card__content">
+              Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини <br> 1980-1995 років.
+            </div>
+          </div>
+          <div class="card">
+            <img
+              class="card__foto"
+              src="../src/images/Rectangle1.png"
+              alt="page"
+            >
+            <div class="card__date">
+              <span>ВИСТАВКА</span>
+              <a target="blank" href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=MW5hZnBiM2hhaGhzb2RkOXZncmlxMHBuYWUgdGVtYXF3ZXJ0eTE1QG0&amp;tmsrc=temaqwerty15%40gmail.com">
+                15.03-29.06.2027
+              </a>
+            </div>
+            <h3 class="card__title">
+              І спогади і мрії
+            </h3>
+            <div class="card__content">
+              Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </div>
+          </div>
+        </div>
+
+      </div>
+      <div class="main__foto">
+        <div class="main__content">
+          <div class="main__contents">
+            <span>ЛЕКЦІЯ</span>
+            <a target="blank" href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=MW5hZnBiM2hhaGhzb2RkOXZncmlxMHBuYWUgdGVtYXF3ZXJ0eTE1QG0&amp;tmsrc=temaqwerty15%40gmail.com">
+              26/04/2027 - 11:00
+            </a>
+          </div>
+          <h3>
+            Від класицизму до романтизму
+          </h3>
+        </div>
+      </div>
+    </main>
+    <div class="gallery">
+      <h2 class="gallery__title">
+        Галерея
+      </h2>
+      <div class="img-slider swiper-container mySwiper">
+        <div class="img-slider__wraper swiper-wrapper">
+          <div class="img-slider__slide swiper-slide">
+            <div class="img-slider__imege">
+              <img src="./images/Rectangle6.jpg" alt="Картина">
+            </div>
+          </div>
+          <div class="img-slider__slide swiper-slide">
+            <div class="img-slider__imege">
+              <img src="./images/Rectangle7.jpg" alt="Картина">
+            </div>
+          </div>
+          <div class="img-slider__slide swiper-slide">
+            <div class="img-slider__imege">
+              <img src="./images/Rectangle8.jpeg" alt="Картина">
+            </div>
+          </div>
+          <div class="img-slider__slide swiper-slide">
+            <div class="img-slider__imege">
+              <img src="./images/Rectangle9.jpg" alt="Картина">
+            </div>
+          </div>
+          <div class="img-slider__slide swiper-slide">
+            <div class="img-slider__imege">
+              <img src="./images/Rectangle10.jpg" alt="Картина">
+            </div>
+          </div>
+          <div class="img-slider__slide swiper-slide">
+            <div class="img-slider__imege">
+              <img src="./images/Rectangle11.jpeg" alt="Картина">
+            </div>
+          </div>
+        </div>
+        <div class="img-slider__swiper-pagination swiper-pagination"></div>
+      </div>
+    </div>
+    <footer class="footer">
+
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script>
+      var swiper = new Swiper(".mySwiper", {
+        spaceBetween: 30,
+        pagination: {
+          el: ".swiper-pagination",
+          clickable: true,
+          dynamicBullets: true,
+        },
+      });
+    </script>
   </body>
 </html>
