--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body class="main-container">
+  <body class="main-content">
     <header class="header">
       <!-- <div class="header__burger-logo-container">
         <div class="header__burger">=</div>
@@ -28,6 +28,29 @@
           alt="muzej Ukrayini Kiyiv"
       >
     </header>
+    <main class="main">
+      <h2>Актуальні події</h2>
+      <div class="main__container-galery">
+        <img
+          src="images/Rectangle 2.2.png"
+          alt="photo"
+          class="main__galery-image"
+        >
+        <div class="main__galery-text">
+          <div class="main__galery-text-header">
+            <h5>ВИСТАВКА</h5>
+            <h5>26.08-29.11.2019</h5>
+          </div>
+          <h3 class="main__galery-text-title">
+            Йду і повертаюсь
+          </h3>
+          <p class="main__galery-text-desc">
+            Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+          </p>
+        </div>
+      </div>
+      <div class="main__container-photo"></div>
+    </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
