--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,25 @@
           </p>
         </div>
       </div>
+      <div class="main__container-galery-reverse">
+        <img
+          src="images/Rectangle 4.2.png"
+          alt="photo"
+          class="main__galery-image"
+        >
+        <div class="main__galery-text">
+          <div class="main__galery-text-header">
+            <h5>ВИСТАВКА</h5>
+            <h5>26.08-29.11.2019</h5>
+          </div>
+          <h3 class="main__galery-text-title">
+            Йду і повертаюсь
+          </h3>
+          <p class="main__galery-text-desc">
+            Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+          </p>
+        </div>
+      </div>
       <div class="main__container-photo"></div>
     </main>
     <script type="text/javascript" src="scripts/main.js"></script>
