--- a/src/index.html
+++ b/src/index.html
@@ -69,6 +69,8 @@
         </div>
       </div>
       <div class="main__container-photo"></div>
+      <div class="main__photo-center">
+      </div>
     </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
