--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,16 @@
         </div>
       </div>
       <div class="main__container-photo"></div>
-      <div class="main__photo-center">
+    </main>
+    <div class="main__photo-center-container">
+      <img
+        src="images/Rectangle_20.1.png"
+        alt="photo"
+        class="main__photo-center"
+      >
+    </div>
+    <main class="main">
+      <div class="main__footer-galery">
       </div>
     </main>
     <script type="text/javascript" src="scripts/main.js"></script>
