--- a/src/index.html
+++ b/src/index.html
@@ -79,6 +79,30 @@
     </div>
     <main class="main">
       <div class="main__footer-galery">
+        <img src="images/Rectangle 13.8.png"
+          alt="photo"
+          class="main__footer-galery-photo"
+        >
+        <img src="images/Rectangle 3.2.png"
+          alt="photo"
+          class="main__footer-galery-photo"
+        >
+        <img src="images/Rectangle 24.png"
+          alt="photo"
+          class="main__footer-galery-photo"
+        >
+        <img src="images/Rectangle 13.6.png"
+          alt="photo"
+          class="main__footer-galery-photo"
+        >
+        <img src="images/Rectangle 13.7.png"
+          alt="photo"
+          class="main__footer-galery-photo"
+        >
+        <img src="images/Rectangle 25.png"
+          alt="photo"
+          class="main__footer-galery-photo"
+        >
       </div>
     </main>
     <script type="text/javascript" src="scripts/main.js"></script>
