added only header

--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,77 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link rel="stylesheet"
+          href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+          integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+          crossorigin="anonymous"
+    >
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700;800&family=Oswald&display=swap" rel="stylesheet">
+    <link rel="icon" href="./images/NA MU.png">
     <link rel="stylesheet" href="./styles/main.scss">
+    <script type="text/javascript" src="scripts/main.js"></script>
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <header class="header">
+      <input type="checkbox"
+          name="toggler"
+          id="menu"
+          class="header__toggler"
+        >
+      <label for="menu" class="header__button">
+        <span class="header__button-item"></span>
+      </label>
+      <div class="menu header__menu">
+        <img
+        src="./images/NA MU.png"
+        class="menu__logo logo" alt="logo namu"
+        >
+        <nav class="nav menu__nav">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#gallery">Галерея</a>
+            </li>
+            <li class="nav__item">
+              <a href="#events">Виставки та події</a>
+            </li>
+            <li class="nav__item">
+              <a href="#info">Відвідування</a>
+            </li>
+            <li class="nav__item">
+              <a href="#subscription">Стати нашим другом</a>
+            </li>
+            <li class="nav__item">
+              <a href="#info">Про Нас</a>
+            </li>
+            <li class="nav__item">
+              <a href="#subscription">Магазин</a>
+            </li>
+            <li class="nav__item">
+              <a href="#subscription">Блог</a>
+            </li>
+            <li class="nav__item">
+              <a href="#info">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+        <a href="https://google.com.ua" class="menu__search fas fa-search"></a>
+      </div>
+    </header>
+
+    <main>
+      <section class="main">
+        <div class="main__information">
+          <h1 class="main__title">
+            худож<span class="main__title--empty">ній</span><br>музей
+          </h1>
+          <a href="#subscription" class="main__item ">квитки
+            <div class="main__button button"></div>
+          </a>
+        </div>
+        <div class="main__image"></div>
+      </section>
+    </main>
   </body>
 </html>
