--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&display=swap" rel="stylesheet">
   </head>
   <body class="page__body">
     <header class="page__header">
+      <a href="#">
+        <img
+          class="menu-icon"
+          src="./images/menu.svg"
+          alt="menu-icon"
+        >
+      </a>
       <div class="image-container">
         <div class="title-container">
           <h1 class="image__title">na<br>mu</h1>
@@ -15,10 +25,100 @@
       </div>
 
       <h1 class="page__title">Художній музей</h1>
+
+      <div class="buy-container">
+        <a
+          class="buy-link"
+          href="#"
+        >
+          <p>квитки</p>
+        </a>
+      </div>
     </header>
 
     <main class="main">
+      <h2 class="main__title">
+        Актуальні події
+      </h2>
 
+      <div class="main__card card">
+        <img
+          class="card__image"
+          src="./images/1.jpg"
+          alt="actual image"
+        >
+
+        <div class="card__subscriptions">
+          <div class="card__subtitle">
+            виставка
+          </div>
+
+          <div class="card__date">
+            26.08-29.11.2019
+          </div>
+        </div>
+        <h3 class="card__title">
+          Йду і повертаюсь
+        </h3>
+
+        <p class="card__description">
+          Національний Художній Музей України презентує
+          унікальну частину колекції Градобанку - українське
+          мистецтво другої половини 1980-1995 років.
+        </p>
+      </div>
+
+      <div class="main__card card">
+        <img
+          class="card__image"
+          src="./images/2.jpg"
+          alt="actual image"
+        >
+
+        <div class="card__subscriptions">
+          <div class="card__subtitle">
+            виставка
+          </div>
+
+          <div class="card__date">
+            26.08-29.11.2019
+          </div>
+        </div>
+        <h3 class="card__title">
+          І спогади і мрії
+        </h3>
+
+        <p class="card__description">
+          Національний художній музей України до 100 річчя
+          від дня народження видатної української художниці
+          Тетяни Яблонської відкриває ретроспективну ювілейну
+          виставку «І спогади і мрії».
+        </p>
+      </div>
+
+      <div class="main__middle">
+        <img
+          class="main__middle-image"
+          src="./images/center.jpg"
+          alt="sunrise"
+        >
+        <div class="announcement">
+          <div class="announcement__subscriptions">
+            <div class="announcement__subtitle">
+              лекція
+            </div>
+
+            <div class="announcement__date">
+              26/08/2019 - 11:00
+            </div>
+          </div>
+
+          <h3 class="announcement__title">
+            Від класицизму до романтизму
+          </h3>
+        </div>
+      </div>
+      </div>
     </main>
 
     <footer class="footer">
