--- a/src/index.html
+++ b/src/index.html
@@ -37,71 +37,74 @@
     </header>
 
     <main class="main">
-      <h2 class="main__title">
-        Актуальні події
-      </h2>
+      <section class="main__section">
+        <h2 class="main__title">
+          Актуальні події
+        </h2>
 
-      <div class="main__card card">
-        <img
-          class="card__image"
-          src="./images/1.jpg"
-          alt="actual image"
-        >
+        <div class="card">
+          <img
+            class="card__image"
+            src="./images/1.jpg"
+            alt="actual image"
+          >
 
-        <div class="card__subscriptions">
-          <div class="card__subtitle">
-            виставка
+          <div class="card__subscriptions">
+            <div class="card__subtitle">
+              виставка
+            </div>
+
+            <div class="card__date">
+              26.08-29.11.2019
+            </div>
           </div>
+          <h3 class="card__title">
+            Йду і повертаюсь
+          </h3>
 
-          <div class="card__date">
-            26.08-29.11.2019
-          </div>
+          <p class="card__description">
+            Національний Художній Музей України презентує
+            унікальну частину колекції Градобанку - українське
+            мистецтво другої половини 1980-1995 років.
+          </p>
         </div>
-        <h3 class="card__title">
-          Йду і повертаюсь
-        </h3>
 
-        <p class="card__description">
-          Національний Художній Музей України презентує
-          унікальну частину колекції Градобанку - українське
-          мистецтво другої половини 1980-1995 років.
-        </p>
-      </div>
+        <div class="card">
+          <img
+            class="card__image"
+            src="./images/2.jpg"
+            alt="actual image"
+          >
 
-      <div class="main__card card">
-        <img
-          class="card__image"
-          src="./images/2.jpg"
-          alt="actual image"
-        >
+          <div class="card__subscriptions">
+            <div class="card__subtitle">
+              виставка
+            </div>
 
-        <div class="card__subscriptions">
-          <div class="card__subtitle">
-            виставка
+            <div class="card__date">
+              26.08-29.11.2019
+            </div>
           </div>
+          <h3 class="card__title">
+            І спогади і мрії
+          </h3>
 
-          <div class="card__date">
-            26.08-29.11.2019
-          </div>
+          <p class="card__description">
+            Національний художній музей України до 100 річчя
+            від дня народження видатної української художниці
+            Тетяни Яблонської відкриває ретроспективну ювілейну
+            виставку «І спогади і мрії».
+          </p>
         </div>
-        <h3 class="card__title">
-          І спогади і мрії
-        </h3>
+      </section>
 
-        <p class="card__description">
-          Національний художній музей України до 100 річчя
-          від дня народження видатної української художниці
-          Тетяни Яблонської відкриває ретроспективну ювілейну
-          виставку «І спогади і мрії».
-        </p>
-      </div>
-
-      <div class="main__middle">
+      <section class="main__middle">
         <img
-          class="main__middle-image"
+          class="main__image"
           src="./images/center.jpg"
           alt="sunrise"
         >
+
         <div class="announcement">
           <div class="announcement__subscriptions">
             <div class="announcement__subtitle">
@@ -117,12 +120,72 @@
             Від класицизму до романтизму
           </h3>
         </div>
-      </div>
-      </div>
+      </section>
+
+      <section class="main__section">
+        <h3 class="main__title">
+          Галерея
+        </h3>
+        <div class="gallery">
+          <img
+            class="gallery__image"
+            src="./images/gallery-1.jpg"
+            alt="ukrainian woman"
+          >
+
+          <div class="gallery__circles">
+            <div class="gallery__circle is-active"></div>
+            <div class="gallery__circle"></div>
+            <div class="gallery__circle"></div>
+            <div class="gallery__circle"></div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
+      <section class="footer__top">
+        <h3 class="footer__title">
+          Підписка
+        </h3>
 
+        <p class="footer__description">
+          Бути в курсі всіх актуальних
+          подій та останніх новин.
+        </p>
+
+        <form class="form" action="#">
+          <input
+            class="form__input"
+            type="email"
+            required
+            placeholder="E-mail"
+          >
+          <button class="form__button">
+            <img src="./images/Vector.svg" alt="button image">
+          </button>
+        </form>
+      </section>
+
+      <section class="footer__bottom">
+        <div class="container">
+          <div class="title-container">
+            <h1 class="image__title">na<br>mu</h1>
+          </div>
+          <div class="link">
+            <img
+              class="link__facebook"
+              src="./images/Facebook.svg"
+              alt="facebook"
+            >
+            <img
+              class="link__instagram"
+              src="./images/instagram.svg"
+              alt="instagram"
+            >
+          </div>
+        </div>
+      </section>
     </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
